--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -151,7 +151,9 @@
     "\n",
     "import random \n",
     "random.seed(42)\n",
-    "random.shuffle(words)"
+    "random.shuffle(words)\n",
+    "n1 = int(0.8*len(words))\n",
+    "n2 = int(0.9*len(words))"
    ]
   }
  ],
