--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -153,7 +153,10 @@
     "random.seed(42)\n",
     "random.shuffle(words)\n",
     "n1 = int(0.8*len(words))\n",
-    "n2 = int(0.9*len(words))"
+    "n2 = int(0.9*len(words))\n",
+    "\n",
+    "Xtr, Ytr = build_dataset(words[:n1])\n",
+    "Xdev, Ydev = build_dataset(words[n1:n2])"
    ]
   }
  ],
