--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -156,7 +156,8 @@
     "n2 = int(0.9*len(words))\n",
     "\n",
     "Xtr, Ytr = build_dataset(words[:n1])\n",
-    "Xdev, Ydev = build_dataset(words[n1:n2])"
+    "Xdev, Ydev = build_dataset(words[n1:n2])\n",
+    "Xte, Yte = build_dataset(words[n2:])"
    ]
   }
  ],
