--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -123,9 +123,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([182625, 3]) torch.Size([182625])\n",
+      "torch.Size([22655, 3]) torch.Size([22655])\n",
+      "torch.Size([22866, 3]) torch.Size([22866])\n"
+     ]
+    }
+   ],
    "source": [
     "# build the dataset \n",
     "\n",
@@ -159,6 +169,13 @@
     "Xdev, Ydev = build_dataset(words[n1:n2])\n",
     "Xte, Yte = build_dataset(words[n2:])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
