--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -172,6 +172,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "C = torch.randn((27, 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
