--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -184,7 +184,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "emb = C[X]\n",
+    "emb.shape "
+   ]
   }
  ],
  "metadata": {
