--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -205,7 +205,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "W1 = torch.randn((6, 100))\n",
+    "b1 = torch.randn(100)"
+   ]
   }
  ],
  "metadata": {
