--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -215,7 +215,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "h = torch.tanh(emb.view(-1, 6) @ W1 + b1)"
+   ]
   }
  ],
  "metadata": {
