--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -221,12 +221,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.8006,  0.3255,  0.9803,  ..., -0.0978, -0.9948,  0.5538],\n",
+       "        [-0.8585, -0.5499,  0.9903,  ...,  0.4158,  0.9678, -0.9878],\n",
+       "        [-0.9277, -0.9988,  0.5238,  ...,  0.3748,  0.2136,  0.9991],\n",
+       "        ...,\n",
+       "        [ 0.4504,  0.9728,  0.9270,  ..., -0.5798,  0.7510, -0.9538],\n",
+       "        [ 0.4908,  0.9303,  0.2076,  ..., -0.5083,  0.4391, -0.9811],\n",
+       "        [-0.6646, -0.2395,  0.9955,  ...,  0.5864,  1.0000, -0.9996]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "h "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
