--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -270,7 +270,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "W2 = torch.randn((100, 27))\n",
+    "b2 = torch.randn(27)"
+   ]
   }
  ],
  "metadata": {
