--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -280,7 +280,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "logits = h @ W2 + b2 "
+   ]
   }
  ],
  "metadata": {
