--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -306,6 +306,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "counts = logits.exp()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
