--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -318,7 +318,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "prob = counts / counts.sum(1, keepdim=True)"
+   ]
   }
  ],
  "metadata": {
