--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -347,7 +347,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "loss = -prob[torch.arange(32), Y].log().mean()\n",
+    "loss "
+   ]
   }
  ],
  "metadata": {
