--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -417,7 +417,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "g = torch.Generator().manual_seed(2147483647) # for reproducibility \n",
+    "C = torch.randn((27, 10), generator=g)\n",
+    "W1 = torch.randn((30, 200), generator=g)\n",
+    "b1 = torch.randn(200, generator=g)\n",
+    "W2 = torch.randn((200, 27), generator=g)\n",
+    "b2 = torch.randn(27, generator=g)"
+   ]
   }
  ],
  "metadata": {
