--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -423,7 +423,8 @@
     "W1 = torch.randn((30, 200), generator=g)\n",
     "b1 = torch.randn(200, generator=g)\n",
     "W2 = torch.randn((200, 27), generator=g)\n",
-    "b2 = torch.randn(27, generator=g)"
+    "b2 = torch.randn(27, generator=g)\n",
+    "parameters = [C, W1, b1, W2, b2]"
    ]
   }
  ],
