--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -432,7 +432,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "sum(p.nelement() for p in parameters) # number of parameters in total "
+   ]
   }
  ],
  "metadata": {
