--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -452,7 +452,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for p in parameters:\n",
+    "    p.requires_grad = True "
+   ]
   }
  ],
  "metadata": {
