--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -462,7 +462,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lre = torch.linspace(-3, 0, 1000)"
+   ]
   }
  ],
  "metadata": {
