--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -463,7 +463,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lre = torch.linspace(-3, 0, 1000)"
+    "lre = torch.linspace(-3, 0, 1000)\n",
+    "lrs = 10**lre "
    ]
   }
  ],
