--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -472,7 +472,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "lri = []\n",
+    "lossi = []\n",
+    "stepi = []"
+   ]
   }
  ],
  "metadata": {
