--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -483,7 +483,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for i in range(200000):\n",
+    "    \n",
+    "    # minibatch construct \n",
+    "    ix = torch.randint(0, Xtr.shape[0], (32,))\n",
+    "    \n",
+    "    "
+   ]
   }
  ],
  "metadata": {
