--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -489,7 +489,7 @@
     "    # minibatch construct \n",
     "    ix = torch.randint(0, Xtr.shape[0], (32,))\n",
     "    \n",
-    "    "
+    "    # forward pass "
    ]
   }
  ],
