--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -489,7 +489,10 @@
     "    # minibatch construct \n",
     "    ix = torch.randint(0, Xtr.shape[0], (32,))\n",
     "    \n",
-    "    # forward pass "
+    "    # forward pass \n",
+    "    emb = C[Xtr[ix]] # (32, 3, 10)\n",
+    "    h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 200)\n",
+    "    logits = h @ W2 + b2 # (32, 27)"
    ]
   }
  ],
