--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -493,7 +493,8 @@
     "    emb = C[Xtr[ix]] # (32, 3, 10)\n",
     "    h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 200)\n",
     "    logits = h @ W2 + b2 # (32, 27)\n",
-    "    loss = F.cross_entropy(logits, Ytr[ix])"
+    "    loss = F.cross_entropy(logits, Ytr[ix])\n",
+    "    # print(loss.item())"
    ]
   }
  ],
