--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -494,7 +494,9 @@
     "    h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 200)\n",
     "    logits = h @ W2 + b2 # (32, 27)\n",
     "    loss = F.cross_entropy(logits, Ytr[ix])\n",
-    "    # print(loss.item())"
+    "    # print(loss.item())\n",
+    "    \n",
+    "    # backward pass "
    ]
   }
  ],
