--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -496,7 +496,10 @@
     "    loss = F.cross_entropy(logits, Ytr[ix])\n",
     "    # print(loss.item())\n",
     "    \n",
-    "    # backward pass "
+    "    # backward pass \n",
+    "    for p in parameters:\n",
+    "        p.grad = None \n",
+    "    loss.backward()"
    ]
   }
  ],
