--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -499,7 +499,10 @@
     "    # backward pass \n",
     "    for p in parameters:\n",
     "        p.grad = None \n",
-    "    loss.backward()"
+    "    loss.backward()\n",
+    "    \n",
+    "    # update \n",
+    "    # lr = lrs[i]"
    ]
   }
  ],
