--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -502,7 +502,10 @@
     "    loss.backward()\n",
     "    \n",
     "    # update \n",
-    "    # lr = lrs[i]"
+    "    # lr = lrs[i]\n",
+    "    lr = 0.1 if i < 100000 else 0.01 \n",
+    "    for p in parameters:\n",
+    "        p.data += -lr * p.grad "
    ]
   }
  ],
