--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -505,7 +505,9 @@
     "    # lr = lrs[i]\n",
     "    lr = 0.1 if i < 100000 else 0.01 \n",
     "    for p in parameters:\n",
-    "        p.data += -lr * p.grad "
+    "        p.data += -lr * p.grad \n",
+    "        \n",
+    "    # track stats "
    ]
   }
  ],
