--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -507,7 +507,8 @@
     "    for p in parameters:\n",
     "        p.data += -lr * p.grad \n",
     "        \n",
-    "    # track stats "
+    "    # track stats \n",
+    "    # lri.append(lre[i])"
    ]
   }
  ],
