--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -508,7 +508,11 @@
     "        p.data += -lr * p.grad \n",
     "        \n",
     "    # track stats \n",
-    "    # lri.append(lre[i])"
+    "    # lri.append(lre[i])\n",
+    "    stepi.append(i)\n",
+    "    lossi.append(loss.log10().item())\n",
+    "    \n",
+    "# print(loss.item())"
    ]
   }
  ],
