--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -513,6 +513,15 @@
     "    lossi.append(loss.log10().item())\n",
     "    \n",
     "# print(loss.item())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(stepi, lossi)"
    ]
   }
  ],
