--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -550,7 +550,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "emb = C[Xtr] # (32, 3, 2)"
+   ]
   }
  ],
  "metadata": {
