--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -551,7 +551,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "emb = C[Xtr] # (32, 3, 2)"
+    "emb = C[Xtr] # (32, 3, 2)\n",
+    "h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 100)"
    ]
   }
  ],
