--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -552,7 +552,8 @@
    "outputs": [],
    "source": [
     "emb = C[Xtr] # (32, 3, 2)\n",
-    "h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 100)"
+    "h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 100)\n",
+    "logits = h @ W2 + b2 #(32, 27)\n"
    ]
   }
  ],
