--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -553,7 +553,8 @@
    "source": [
     "emb = C[Xtr] # (32, 3, 2)\n",
     "h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 100)\n",
-    "logits = h @ W2 + b2 #(32, 27)\n"
+    "logits = h @ W2 + b2 #(32, 27)\n",
+    "loss = F.cross_entropy(logits, Ytr)"
    ]
   }
  ],
