--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -547,15 +547,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(2.1199, grad_fn=<NllLossBackward0>)"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emb = C[Xtr] # (32, 3, 2)\n",
     "h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 100)\n",
     "logits = h @ W2 + b2 #(32, 27)\n",
     "loss = F.cross_entropy(logits, Ytr)\n",
     "loss "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emb = C[Xdev] # (32, 3, 2)\n",
+    "h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 100)"
    ]
   }
  ],
