--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -576,7 +576,9 @@
    "outputs": [],
    "source": [
     "emb = C[Xdev] # (32, 3, 2)\n",
-    "h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 100)"
+    "h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 100)\n",
+    "logits = h @ W2 + b2 # (32, 27)\n",
+    "loss = F.cross_entropy(logits, Ydev)"
    ]
   }
  ],
