--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -571,9 +571,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(2.1667, grad_fn=<NllLossBackward0>)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "emb = C[Xdev] # (32, 3, 2)\n",
     "h = torch.tanh(emb.view(-1, 30) @ W1 + b1) # (32, 100)\n",
@@ -581,6 +592,13 @@
     "loss = F.cross_entropy(logits, Ydev)\n",
     "loss "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
