--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -598,7 +598,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# visualize dimensions 0 and 1 of the embedding matrix C for all characters "
+   ]
   }
  ],
  "metadata": {
