--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -599,7 +599,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# visualize dimensions 0 and 1 of the embedding matrix C for all characters "
+    "# visualize dimensions 0 and 1 of the embedding matrix C for all characters \n",
+    "plt.figure(figsize=(8,8))"
    ]
   }
  ],
