--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -600,7 +600,11 @@
    "outputs": [],
    "source": [
     "# visualize dimensions 0 and 1 of the embedding matrix C for all characters \n",
-    "plt.figure(figsize=(8,8))"
+    "plt.figure(figsize=(8,8))\n",
+    "plt.scatter(C[:,0].data, C[:,1].data, s=200)\n",
+    "for i in range(C.shape[0]):\n",
+    "    plt.text(C[i,0].item(), C[i,1].item(), itos[i], ha=\"center\",  va=\"center\", color='white')\n",
+    "plt.grid('minor')"
    ]
   }
  ],
