--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -623,7 +623,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# training split, dev/validation split, test split \n",
+    "# 80%, 10%, 10% "
+   ]
   }
  ],
  "metadata": {
