--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -633,7 +633,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "context = [0] * block_size\n",
+    "C[torch.tensor([context])].shape "
+   ]
   }
  ],
  "metadata": {
