--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -654,7 +654,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# sample from the model \n",
+    "g = torch.Generator().manual_seed(2147483647 + 10)\n",
+    "\n",
+    "for _ in range(20):\n",
+    "    \n",
+    "    out = []\n",
+    "    context = [0] * block_size # initialize with all... "
+   ]
   }
  ],
  "metadata": {
