--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -661,7 +661,9 @@
     "for _ in range(20):\n",
     "    \n",
     "    out = []\n",
-    "    context = [0] * block_size # initialize with all... "
+    "    context = [0] * block_size # initialize with all... \n",
+    "    while True:\n",
+    "        emb = C[torch.tensor([context])] # (1, block_size, d)"
    ]
   }
  ],
