--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -663,7 +663,9 @@
     "    out = []\n",
     "    context = [0] * block_size # initialize with all... \n",
     "    while True:\n",
-    "        emb = C[torch.tensor([context])] # (1, block_size, d)"
+    "        emb = C[torch.tensor([context])] # (1, block_size, d)\n",
+    "        h = torch.tanh(emb.view(1, -1) @ W1 + b1)\n",
+    "        logits = h @ W2 + b2 "
    ]
   }
  ],
