--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -666,7 +666,8 @@
     "        emb = C[torch.tensor([context])] # (1, block_size, d)\n",
     "        h = torch.tanh(emb.view(1, -1) @ W1 + b1)\n",
     "        logits = h @ W2 + b2 \n",
-    "        probs = F.softmax(logits, dim=1)"
+    "        probs = F.softmax(logits, dim=1)\n",
+    "        ix = torch.multinomial(probs, num_samples=1, generator=g).item()"
    ]
   }
  ],
