--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -668,7 +668,12 @@
     "        logits = h @ W2 + b2 \n",
     "        probs = F.softmax(logits, dim=1)\n",
     "        ix = torch.multinomial(probs, num_samples=1, generator=g).item()\n",
-    "        context = context[1:] + [ix]"
+    "        context = context[1:] + [ix]\n",
+    "        out.append(ix)\n",
+    "        if ix == 0:\n",
+    "            break \n",
+    "        \n",
+    "    print(''.join(itos[i] for i in out))"
    ]
   }
  ],
