--- a/mlp_char_level.ipynb
+++ b/mlp_char_level.ipynb
@@ -651,9 +651,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "carpzirah.\n",
+      "jhavi.\n",
+      "kimri.\n",
+      "rehtyn.\n",
+      "kanden.\n",
+      "jazhneefemerynciareen.\n",
+      "nellara.\n",
+      "chaiivon.\n",
+      "leigh.\n",
+      "ham.\n",
+      "poin.\n",
+      "quinn.\n",
+      "suline.\n",
+      "liveni.\n",
+      "wautro.\n",
+      "dearyxia.\n",
+      "kael.\n",
+      "durat.\n",
+      "edae.\n",
+      "iia.\n"
+     ]
+    }
+   ],
    "source": [
     "# sample from the model \n",
     "g = torch.Generator().manual_seed(2147483647 + 10)\n",
@@ -675,6 +702,13 @@
     "        \n",
     "    print(''.join(itos[i] for i in out))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
