--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -5,7 +5,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch \n",
+    "import torch.nn.functional as F \n",
+    "import matplotlib.pyplot as plt \n"
+   ]
   }
  ],
  "metadata": {
