--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -17,7 +17,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# read in all the words \n",
+    "words = open('names.txt', 'r').read().splitlines()"
+   ]
   }
  ],
  "metadata": {
