--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -19,7 +19,8 @@
    "outputs": [],
    "source": [
     "# read in all the words \n",
-    "words = open('names.txt', 'r').read().splitlines()"
+    "words = open('names.txt', 'r').read().splitlines()\n",
+    "words[:8]"
    ]
   }
  ],
