--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -59,7 +59,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# build the vocabulary of characters and mappings to/from integers "
+   ]
   }
  ],
  "metadata": {
