--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -60,7 +60,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# build the vocabulary of characters and mappings to/from integers "
+    "# build the vocabulary of characters and mappings to/from integers \n",
+    "chars = sorted(list(set(''.join(words))))\n",
+    "stoi = {s:i+1 for i,s in enumerate(chars)}\n",
+    "stoi['.'] = 0 \n",
+    "itos = {i:s for s,i in stoi.items()}\n",
+    "vocab_size = len(itos)\n",
+    "print(itos)\n",
+    "print(vocab_size)"
    ]
   }
  ],
