--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -84,7 +84,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# build the dataset \n",
+    "block_size = 3 # context length: how many characters do we take to predict the next one? "
+   ]
   }
  ],
  "metadata": {
