--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -86,7 +86,10 @@
    "outputs": [],
    "source": [
     "# build the dataset \n",
-    "block_size = 3 # context length: how many characters do we take to predict the next one? "
+    "block_size = 3 # context length: how many characters do we take to predict the next one? \n",
+    "\n",
+    "def build_dataset(words):\n",
+    "    X, Y = [], [] "
    ]
   }
  ],
