--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -89,7 +89,10 @@
     "block_size = 3 # context length: how many characters do we take to predict the next one? \n",
     "\n",
     "def build_dataset(words):\n",
-    "    X, Y = [], [] "
+    "    X, Y = [], [] \n",
+    "    \n",
+    "    for w in words:\n",
+    "        context = [0] * block_size "
    ]
   }
  ],
