--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -92,7 +92,15 @@
     "    X, Y = [], [] \n",
     "    \n",
     "    for w in words:\n",
-    "        context = [0] * block_size "
+    "        context = [0] * block_size \n",
+    "        for ch in w + '.':\n",
+    "            ix = stoi[ch]\n",
+    "            X.append(context)\n",
+    "            Y.append(ix)\n",
+    "            context = context[1:] + [ix] # crop and append \n",
+    "            \n",
+    "    X = torch.tensor(X)\n",
+    "    Y = torch.tensor(Y)"
    ]
   }
  ],
