--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -110,7 +110,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random \n",
+    "random.seed(42)\n",
+    "random.shuffle(words)"
+   ]
   }
  ],
  "metadata": {
