--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -113,7 +113,13 @@
    "source": [
     "import random \n",
     "random.seed(42)\n",
-    "random.shuffle(words)"
+    "random.shuffle(words)\n",
+    "n1 = int(0.8*len(words))\n",
+    "n2 = int(0.9*len(words))\n",
+    "\n",
+    "Xtr, Ytr = build_dataset(words[:n1])        # 80% \n",
+    "Xdev, Ydev = build_dataset(words[n1:n2])    # 10% \n",
+    "Xte, Yte = build_dataset(words[n2:])        # 10% "
    ]
   }
  ],
