--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -107,9 +107,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([182625, 3]) torch.Size([182625])\n",
+      "torch.Size([22655, 3]) torch.Size([22655])\n",
+      "torch.Size([22866, 3]) torch.Size([22866])\n"
+     ]
+    }
+   ],
    "source": [
     "import random \n",
     "random.seed(42)\n",
@@ -120,6 +130,15 @@
     "Xtr, Ytr = build_dataset(words[:n1])        # 80% \n",
     "Xdev, Ydev = build_dataset(words[n1:n2])    # 10% \n",
     "Xte, Yte = build_dataset(words[n2:])        # 10% "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MLP revisited "
    ]
   }
  ],
