--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -138,7 +138,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# MLP revisited "
+    "# MLP revisited \n",
+    "n_embd = 10 # the dimensionality of the character embedding vectors \n",
+    "n_hidden = 200 # the number of neurons in the hidden layer of the MLP \n",
+    "\n",
+    "g = torch.Generator().manual_seed(2147483647) # for reproducibility "
    ]
   }
  ],
