--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -142,7 +142,9 @@
     "n_embd = 10 # the dimensionality of the character embedding vectors \n",
     "n_hidden = 200 # the number of neurons in the hidden layer of the MLP \n",
     "\n",
-    "g = torch.Generator().manual_seed(2147483647) # for reproducibility "
+    "g = torch.Generator().manual_seed(2147483647) # for reproducibility \n",
+    "C = torch.randn((vocab_size, n_embd), generator=g)\n",
+    "W1 = torch.randn((n_embd * block_size, n_hidden), generator=g) * (5/3) / ((n_embd * block_size)**0.5) #* 0.2\n"
    ]
   }
  ],
