--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -145,7 +145,9 @@
     "g = torch.Generator().manual_seed(2147483647) # for reproducibility \n",
     "C = torch.randn((vocab_size, n_embd),             generator=g)\n",
     "W1 = torch.randn((n_embd * block_size, n_hidden), generator=g) * (5/3)/((n_embd * block_size)**0.5) #* 0.2\n",
-    "# b1 = torch.randn(n_hidden, generator=g) * 0.01 "
+    "# b1 = torch.randn(n_hidden, generator=g) * 0.01 \n",
+    "W2 = torch.randn((n_hidden, vocab_size), generator=g) * 0.01 \n",
+    "b2 = torch.randn(vocab_size, generator=g) * 0 "
    ]
   }
  ],
