--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -147,7 +147,15 @@
     "W1 = torch.randn((n_embd * block_size, n_hidden), generator=g) * (5/3)/((n_embd * block_size)**0.5) #* 0.2\n",
     "# b1 = torch.randn(n_hidden, generator=g) * 0.01 \n",
     "W2 = torch.randn((n_hidden, vocab_size), generator=g) * 0.01 \n",
-    "b2 = torch.randn(vocab_size, generator=g) * 0 "
+    "b2 = torch.randn(vocab_size, generator=g) * 0 \n",
+    "\n",
+    "# BatchNorm parameters \n",
+    "bngain = torch.ones((1, n_hidden))\n",
+    "bnbias = torch.zeros((1, n_hidden))\n",
+    "bnmean_running = torch.zeros((1, n_hidden))\n",
+    "bnstd_running = torch.ones((1, n_hidden))\n",
+    "\n",
+    "parameters = [C, W1, W2, b2, bngain, bnbias]"
    ]
   }
  ],
