--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -155,7 +155,8 @@
     "bnmean_running = torch.zeros((1, n_hidden))\n",
     "bnstd_running = torch.ones((1, n_hidden))\n",
     "\n",
-    "parameters = [C, W1, W2, b2, bngain, bnbias]"
+    "parameters = [C, W1, W2, b2, bngain, bnbias]\n",
+    "print(sum(p.nelement() for p in parameters)) # number of parameters in total "
    ]
   }
  ],
