--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -156,7 +156,9 @@
     "bnstd_running = torch.ones((1, n_hidden))\n",
     "\n",
     "parameters = [C, W1, W2, b2, bngain, bnbias]\n",
-    "print(sum(p.nelement() for p in parameters)) # number of parameters in total "
+    "print(sum(p.nelement() for p in parameters)) # number of parameters in total \n",
+    "for p in parameters:\n",
+    "    p.requires_grad = True "
    ]
   }
  ],
