--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -175,7 +175,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# same optimization as last time \n"
+    "# same optimization as last time \n",
+    "max_steps = 200000 \n",
+    "batch_size = 32 \n",
+    "lossi = [] \n",
+    "\n"
    ]
   }
  ],
