--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -184,7 +184,10 @@
     "    \n",
     "    # minibatch construct \n",
     "    ix = torch.randint(0, Xtr.shape[0], (batch_size,), generator=g)\n",
-    "    Xb, Yb = Xtr[ix], Ytr[ix] # batch X, Y "
+    "    Xb, Yb = Xtr[ix], Ytr[ix] # batch X, Y \n",
+    "    \n",
+    "    # forward pass \n",
+    "    "
    ]
   }
  ],
