--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -187,7 +187,12 @@
     "    Xb, Yb = Xtr[ix], Ytr[ix] # batch X, Y \n",
     "    \n",
     "    # forward pass \n",
-    "    "
+    "    emb = C[Xb] # embed the characters into vectors \n",
+    "    embcat = emb.view(emb.shape[0], -.1) # concatenate the vectors \n",
+    "    # Linear layer \n",
+    "    hpreact = embcat @ W1 #+ b1 # hidden layer pre-activation \n",
+    "    # BatchNorm layer \n",
+    "    # --------------------------------------- "
    ]
   }
  ],
