--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -192,7 +192,9 @@
     "    # Linear layer \n",
     "    hpreact = embcat @ W1 #+ b1 # hidden layer pre-activation \n",
     "    # BatchNorm layer \n",
-    "    # --------------------------------------- "
+    "    # --------------------------------------- \n",
+    "    bnmeani = hpreact.mean(0, keepdim=True)\n",
+    "    bnstdi = hpreact.std(0, keepdim=True)"
    ]
   }
  ],
