--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -194,7 +194,14 @@
     "    # BatchNorm layer \n",
     "    # --------------------------------------- \n",
     "    bnmeani = hpreact.mean(0, keepdim=True)\n",
-    "    bnstdi = hpreact.std(0, keepdim=True)"
+    "    bnstdi = hpreact.std(0, keepdim=True)\n",
+    "    hpreact = bngain * (hpreact - bnmeani) / bnstdi + bnbias \n",
+    "    with torch.no_grad():\n",
+    "        bnmean_running = 0.999 * bnmean_running + 0.001 * bnmeani \n",
+    "        bnstd_running = 0.999 * bnstd_running + 0.001 * bnstdi \n",
+    "        \n",
+    "    # ----------------------------------------------------------\n",
+    "    # Non-linearity "
    ]
   }
  ],
