--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -201,7 +201,8 @@
     "        bnstd_running = 0.999 * bnstd_running + 0.001 * bnstdi \n",
     "        \n",
     "    # ----------------------------------------------------------\n",
-    "    # Non-linearity "
+    "    # Non-linearity \n",
+    "    h = torch.tanh(hpreact) # hidden layer "
    ]
   }
  ],
