--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -202,7 +202,8 @@
     "        \n",
     "    # ----------------------------------------------------------\n",
     "    # Non-linearity \n",
-    "    h = torch.tanh(hpreact) # hidden layer "
+    "    h = torch.tanh(hpreact) # hidden layer \n",
+    "    logits = h @ W2 + b2 # output layer "
    ]
   }
  ],
