--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -203,7 +203,8 @@
     "    # ----------------------------------------------------------\n",
     "    # Non-linearity \n",
     "    h = torch.tanh(hpreact) # hidden layer \n",
-    "    logits = h @ W2 + b2 # output layer "
+    "    logits = h @ W2 + b2 # output layer \n",
+    "    loss = F.cross_entropy(logits, Yb) # loss function "
    ]
   }
  ],
