--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -204,7 +204,12 @@
     "    # Non-linearity \n",
     "    h = torch.tanh(hpreact) # hidden layer \n",
     "    logits = h @ W2 + b2 # output layer \n",
-    "    loss = F.cross_entropy(logits, Yb) # loss function "
+    "    loss = F.cross_entropy(logits, Yb) # loss function \n",
+    "    \n",
+    "    # backward pass \n",
+    "    for p in parameters:\n",
+    "        p.grad = None \n",
+    "    loss.backward() "
    ]
   }
  ],
