--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -209,7 +209,10 @@
     "    # backward pass \n",
     "    for p in parameters:\n",
     "        p.grad = None \n",
-    "    loss.backward() "
+    "    loss.backward() \n",
+    "    \n",
+    "    # update \n",
+    "    lr = 0.1 if i < 100000 else 0.01 # step learning rate decay "
    ]
   }
  ],
