--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -212,7 +212,9 @@
     "    loss.backward() \n",
     "    \n",
     "    # update \n",
-    "    lr = 0.1 if i < 100000 else 0.01 # step learning rate decay "
+    "    lr = 0.1 if i < 100000 else 0.01 # step learning rate decay \n",
+    "    for p in parameters:\n",
+    "        p.data += -lr * p.grad "
    ]
   }
  ],
