--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -214,7 +214,10 @@
     "    # update \n",
     "    lr = 0.1 if i < 100000 else 0.01 # step learning rate decay \n",
     "    for p in parameters:\n",
-    "        p.data += -lr * p.grad "
+    "        p.data += -lr * p.grad \n",
+    "        \n",
+    "    # track stats \n",
+    "    if i % 10000 == 0: # print every once in a while "
    ]
   }
  ],
