--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -217,7 +217,9 @@
     "        p.data += -lr * p.grad \n",
     "        \n",
     "    # track stats \n",
-    "    if i % 10000 == 0: # print every once in a while "
+    "    if i % 10000 == 0: # print every once in a while \n",
+    "        print(f'{i:7d}/{max_steps:7d}: {loss.item():.4f}')\n",
+    "    lossi.append(loss.log10().item())"
    ]
   }
  ],
