--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -171,9 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      0/ 200000: 3.2879\n"
+     ]
+    }
+   ],
    "source": [
     "# same optimization as last time \n",
     "max_steps = 200000 \n",
@@ -188,7 +196,7 @@
     "    \n",
     "    # forward pass \n",
     "    emb = C[Xb] # embed the characters into vectors \n",
-    "    embcat = emb.view(emb.shape[0], -.1) # concatenate the vectors \n",
+    "    embcat = emb.view(emb.shape[0], -1) # concatenate the vectors \n",
     "    # Linear layer \n",
     "    hpreact = embcat @ W1 #+ b1 # hidden layer pre-activation \n",
     "    # BatchNorm layer \n",
@@ -221,6 +229,13 @@
     "        print(f'{i:7d}/{max_steps:7d}: {loss.item():.4f}')\n",
     "    lossi.append(loss.log10().item())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
