--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -284,7 +284,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# calibrate the batch norm at the end of training \n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    # pass thye training set through \n",
+    "    emb = C[Xtr]  "
+   ]
   }
  ],
  "metadata": {
