--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -289,7 +289,8 @@
     "\n",
     "with torch.no_grad():\n",
     "    # pass thye training set through \n",
-    "    emb = C[Xtr]  "
+    "    emb = C[Xtr]  \n",
+    "    embcat = emb.view(emb.shape[0], -1)"
    ]
   }
  ],
