--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -290,7 +290,8 @@
     "with torch.no_grad():\n",
     "    # pass thye training set through \n",
     "    emb = C[Xtr]  \n",
-    "    embcat = emb.view(emb.shape[0], -1)"
+    "    embcat = emb.view(emb.shape[0], -1)\n",
+    "    hpreact = embcat @ W1 # + b1 "
    ]
   }
  ],
