--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -291,7 +291,8 @@
     "    # pass thye training set through \n",
     "    emb = C[Xtr]  \n",
     "    embcat = emb.view(emb.shape[0], -1)\n",
-    "    hpreact = embcat @ W1 # + b1 "
+    "    hpreact = embcat @ W1 # + b1 \n",
+    "    # measure the mean/std over the entire training set "
    ]
   }
  ],
