--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -292,7 +292,9 @@
     "    emb = C[Xtr]  \n",
     "    embcat = emb.view(emb.shape[0], -1)\n",
     "    hpreact = embcat @ W1 # + b1 \n",
-    "    # measure the mean/std over the entire training set "
+    "    # measure the mean/std over the entire training set \n",
+    "    bnmean = hpreact.mean(0, keepdim=True)\n",
+    "    bnstd = hpreact.std(0, keepdim=True)"
    ]
   }
  ],
