--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -302,7 +302,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "@torch.no_grad() # this decorator disables gradient tracking "
+   ]
   }
  ],
  "metadata": {
