--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -309,7 +309,7 @@
     "        'train': (Xtr, Ytr),\n",
     "        'val': (Xdev, Ydev),\n",
     "        'test': (Xte, Yte), \n",
-    "    }"
+    "    }[split]"
    ]
   }
  ],
