--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -310,7 +310,8 @@
     "        'val': (Xdev, Ydev),\n",
     "        'test': (Xte, Yte), \n",
     "    }[split]\n",
-    "    emb = C[x] # (N, block_size, n_embd)"
+    "    emb = C[x] # (N, block_size, n_embd)\n",
+    "    embcat = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)"
    ]
   }
  ],
