--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -311,7 +311,8 @@
     "        'test': (Xte, Yte), \n",
     "    }[split]\n",
     "    emb = C[x] # (N, block_size, n_embd)\n",
-    "    embcat = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)"
+    "    embcat = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)\n",
+    "    hpreact = embcat @ W1 # + b1 "
    ]
   }
  ],
