--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -312,7 +312,8 @@
     "    }[split]\n",
     "    emb = C[x] # (N, block_size, n_embd)\n",
     "    embcat = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)\n",
-    "    hpreact = embcat @ W1 # + b1 "
+    "    hpreact = embcat @ W1 # + b1 \n",
+    "    # hpreact = bngain * (hpreact.mean(0, keepdim=True)) / hpreact.std(0, keepdim=True) + bnbias "
    ]
   }
  ],
