--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -314,7 +314,8 @@
     "    embcat = emb.view(emb.shape[0], -1) # concat into (N, block_size * n_embd)\n",
     "    hpreact = embcat @ W1 # + b1 \n",
     "    # hpreact = bngain * (hpreact.mean(0, keepdim=True)) / hpreact.std(0, keepdim=True) + bnbias \n",
-    "    hpreact = bngain * (hpreact - bnmean_running) / bnstd_running + bnbias "
+    "    hpreact = bngain * (hpreact - bnmean_running) / bnstd_running + bnbias \n",
+    "    h = torch.tanh(hpreact) # (N, n_hidden)"
    ]
   }
  ],
