--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -315,7 +315,8 @@
     "    hpreact = embcat @ W1 # + b1 \n",
     "    # hpreact = bngain * (hpreact.mean(0, keepdim=True)) / hpreact.std(0, keepdim=True) + bnbias \n",
     "    hpreact = bngain * (hpreact - bnmean_running) / bnstd_running + bnbias \n",
-    "    h = torch.tanh(hpreact) # (N, n_hidden)"
+    "    h = torch.tanh(hpreact) # (N, n_hidden) \n",
+    "    logits = h @ W2 + b2 "
    ]
   }
  ],
