--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -318,7 +318,7 @@
     "    h = torch.tanh(hpreact) # (N, n_hidden) \n",
     "    logits = h @ W2 + b2 # (N, vocab_size)\n",
     "    loss = F.cross_entropy(logits, y)\n",
-    "    "
+    "    print(split, loss.item())"
    ]
   }
  ],
