--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -299,9 +299,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train 2.067195415496826\n",
+      "val 2.105731725692749\n"
+     ]
+    }
+   ],
    "source": [
     "@torch.no_grad() # this decorator disables gradient tracking \n",
     "def split_loss(split):\n",
@@ -323,6 +332,13 @@
     "split_loss('train')\n",
     "split_loss('val')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
