--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -338,7 +338,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## loss log\n",
+    "\n",
+    "### original:\n",
+    "train 2.1245384216308594\n",
+    "val   2.168196439743042\n",
+    "\n",
+    "### fix softmax confidently wrong:\n",
+    "train 2.07\n",
+    "val   2.13\n",
+    "\n",
+    "### fix tanh layer too saturated at init:\n",
+    "train 2.0355966091156006\n",
+    "val   2.1026785373687744\n",
+    "\n",
+    "### use semi-principled \"kaiming init\" instead of hacky init:\n",
+    "train 2.0376641750335693\n",
+    "val   2.106989622116089\n",
+    "\n",
+    "### add batch norm layer\n",
+    "train 2.0668270587921143\n",
+    "val 2.104844808578491\n"
+   ]
   }
  ],
  "metadata": {
