--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -374,7 +374,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Let's train a deeper network \n",
+    "# The classes we create here are the same API as nn.Module in PyTorch "
+   ]
   }
  ],
  "metadata": {
