--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -376,7 +376,12 @@
    "outputs": [],
    "source": [
     "# Let's train a deeper network \n",
-    "# The classes we create here are the same API as nn.Module in PyTorch "
+    "# The classes we create here are the same API as nn.Module in PyTorch \n",
+    "\n",
+    "class Linear: \n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        pass"
    ]
   }
  ],
