--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -380,7 +380,7 @@
     "\n",
     "class Linear: \n",
     "    \n",
-    "    def __init__(self):\n",
+    "    def __init__(self, fan_in, fan_out, bias=True):\n",
     "        pass"
    ]
   }
