--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -381,7 +381,8 @@
     "class Linear: \n",
     "    \n",
     "    def __init__(self, fan_in, fan_out, bias=True):\n",
-    "        self.weight = torch.randn((fan_in, fan_out), generator=g) / fan_in**0.5 "
+    "        self.weight = torch.randn((fan_in, fan_out), generator=g) / fan_in**0.5 \n",
+    "        self.bias = torch.zeros(fan_out) if bias else None "
    ]
   }
  ],
