--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -385,7 +385,10 @@
     "        self.bias = torch.zeros(fan_out) if bias else None \n",
     "        \n",
     "    def __call__(self, x):\n",
-    "        pass"
+    "        self.out = x @ self.weight \n",
+    "        if self.bias is not None:\n",
+    "            self.out += self.bias \n",
+    "        return self.out "
    ]
   }
  ],
