--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -388,7 +388,10 @@
     "        self.out = x @ self.weight \n",
     "        if self.bias is not None:\n",
     "            self.out += self.bias \n",
-    "        return self.out "
+    "        return self.out \n",
+    "    \n",
+    "    def parameters():\n",
+    "        pass "
    ]
   }
  ],
