--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -390,7 +390,7 @@
     "            self.out += self.bias \n",
     "        return self.out \n",
     "    \n",
-    "    def parameters():\n",
+    "    def parameters(self):\n",
     "        pass "
    ]
   }
