--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -391,7 +391,7 @@
     "        return self.out \n",
     "    \n",
     "    def parameters(self):\n",
-    "        pass "
+    "        return [self.weight] + ([] if self.bias is None else [self.bias]) "
    ]
   }
  ],
