--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -391,7 +391,12 @@
     "        return self.out \n",
     "    \n",
     "    def parameters(self):\n",
-    "        return [self.weight] + ([] if self.bias is None else [self.bias]) "
+    "        return [self.weight] + ([] if self.bias is None else [self.bias]) \n",
+    "    \n",
+    "class BatchNorm1d:\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        pass"
    ]
   }
  ],
