--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -395,7 +395,7 @@
     "    \n",
     "class BatchNorm1d:\n",
     "    \n",
-    "    def __init__(self):\n",
+    "    def __init__(self, dim, eps=1e-5, momentum=0.1):\n",
     "        pass"
    ]
   }
