--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -396,7 +396,8 @@
     "class BatchNorm1d:\n",
     "    \n",
     "    def __init__(self, dim, eps=1e-5, momentum=0.1):\n",
-    "        pass"
+    "        self.eps = eps \n",
+    "        "
    ]
   }
  ],
