--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -397,6 +397,8 @@
     "    \n",
     "    def __init__(self, dim, eps=1e-5, momentum=0.1):\n",
     "        self.eps = eps \n",
+    "        self.momentum = momentum \n",
+    "        self.training = True \n",
     "        "
    ]
   }
