--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -399,6 +399,7 @@
     "        self.eps = eps \n",
     "        self.momentum = momentum \n",
     "        self.training = True \n",
+    "        # parameters (trained with backprop)\n",
     "        "
    ]
   }
