--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -400,6 +400,7 @@
     "        self.momentum = momentum \n",
     "        self.training = True \n",
     "        # parameters (trained with backprop)\n",
+    "        self.gamma = torch.ones(dim) \n",
     "        "
    ]
   }
