--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -401,6 +401,8 @@
     "        self.training = True \n",
     "        # parameters (trained with backprop)\n",
     "        self.gamma = torch.ones(dim) \n",
+    "        self.beta = torch.zeros(dim)\n",
+    "        # buffers (trained with a running 'momentum update')\n",
     "        "
    ]
   }
