--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -403,6 +403,8 @@
     "        self.gamma = torch.ones(dim) \n",
     "        self.beta = torch.zeros(dim)\n",
     "        # buffers (trained with a running 'momentum update')\n",
+    "        self.running_mean = torch.zeros(dim)\n",
+    "        self.running_var = torch.ones(dim)\n",
     "        "
    ]
   }
