--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -404,7 +404,10 @@
     "        self.beta = torch.zeros(dim)\n",
     "        # buffers (trained with a running 'momentum update')\n",
     "        self.running_mean = torch.zeros(dim)\n",
-    "        self.running_var = torch.ones(dim)\n",
+    "        self.running_var = torch.ones(dim) \n",
+    "        \n",
+    "    def __call__(self, *args, **kwds):\n",
+    "        pass\n",
     "        "
    ]
   }
