--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -406,7 +406,7 @@
     "        self.running_mean = torch.zeros(dim)\n",
     "        self.running_var = torch.ones(dim) \n",
     "        \n",
-    "    def __call__(self, *args, **kwds):\n",
+    "    def __call__(self, x):\n",
     "        pass\n",
     "        "
    ]
