--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -407,7 +407,7 @@
     "        self.running_var = torch.ones(dim) \n",
     "        \n",
     "    def __call__(self, x):\n",
-    "        pass\n",
+    "        # calculate the forward pass \n",
     "        "
    ]
   }
