--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -408,7 +408,8 @@
     "        \n",
     "    def __call__(self, x):\n",
     "        # calculate the forward pass \n",
-    "        "
+    "        if self.training:\n",
+    "            xmean = x.mean(0, keepdim=True) # batch mean "
    ]
   }
  ],
