--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -409,7 +409,8 @@
     "    def __call__(self, x):\n",
     "        # calculate the forward pass \n",
     "        if self.training:\n",
-    "            xmean = x.mean(0, keepdim=True) # batch mean "
+    "            xmean = x.mean(0, keepdim=True) # batch mean \n",
+    "            xvar = x.var(0, keepdim=True) # batch variance "
    ]
   }
  ],
