--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -410,7 +410,10 @@
     "        # calculate the forward pass \n",
     "        if self.training:\n",
     "            xmean = x.mean(0, keepdim=True) # batch mean \n",
-    "            xvar = x.var(0, keepdim=True) # batch variance "
+    "            xvar = x.var(0, keepdim=True) # batch variance \n",
+    "        else:\n",
+    "            xmean = self.running_mean \n",
+    "            xvar = self.running_var "
    ]
   }
  ],
