--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -413,7 +413,8 @@
     "            xvar = x.var(0, keepdim=True) # batch variance \n",
     "        else:\n",
     "            xmean = self.running_mean \n",
-    "            xvar = self.running_var "
+    "            xvar = self.running_var \n",
+    "        xhat = (x - xmean) / torch.sqrt(xvar + self.eps) # normalize to unit variance "
    ]
   }
  ],
