--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -414,7 +414,8 @@
     "        else:\n",
     "            xmean = self.running_mean \n",
     "            xvar = self.running_var \n",
-    "        xhat = (x - xmean) / torch.sqrt(xvar + self.eps) # normalize to unit variance "
+    "        xhat = (x - xmean) / torch.sqrt(xvar + self.eps) # normalize to unit variance \n",
+    "        self.out = self.gamma * xhat + self.beta "
    ]
   }
  ],
