--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -415,7 +415,8 @@
     "            xmean = self.running_mean \n",
     "            xvar = self.running_var \n",
     "        xhat = (x - xmean) / torch.sqrt(xvar + self.eps) # normalize to unit variance \n",
-    "        self.out = self.gamma * xhat + self.beta "
+    "        self.out = self.gamma * xhat + self.beta \n",
+    "        # update the buffers "
    ]
   }
  ],
