--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -416,7 +416,10 @@
     "            xvar = self.running_var \n",
     "        xhat = (x - xmean) / torch.sqrt(xvar + self.eps) # normalize to unit variance \n",
     "        self.out = self.gamma * xhat + self.beta \n",
-    "        # update the buffers "
+    "        # update the buffers \n",
+    "        if self.training:\n",
+    "            with torch.no_grad():\n",
+    "                self.running_mean = (1 - self.momentum) * self.running_mean + self.momentum * xmean "
    ]
   }
  ],
