--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -420,7 +420,8 @@
     "        if self.training:\n",
     "            with torch.no_grad():\n",
     "                self.running_mean = (1 - self.momentum) * self.running_mean + self.momentum * xmean \n",
-    "                self.running_var = (1 - self.momentum) * self.running_var + self.momentum * xvar "
+    "                self.running_var = (1 - self.momentum) * self.running_var + self.momentum * xvar \n",
+    "            return self.out "
    ]
   }
  ],
