--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -421,7 +421,10 @@
     "            with torch.no_grad():\n",
     "                self.running_mean = (1 - self.momentum) * self.running_mean + self.momentum * xmean \n",
     "                self.running_var = (1 - self.momentum) * self.running_var + self.momentum * xvar \n",
-    "            return self.out "
+    "        return self.out \n",
+    "        \n",
+    "    def parameters(self):\n",
+    "        return [self.gamma, self.beta]"
    ]
   }
  ],
