--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -424,7 +424,11 @@
     "        return self.out \n",
     "        \n",
     "    def parameters(self):\n",
-    "        return [self.gamma, self.beta]"
+    "        return [self.gamma, self.beta]\n",
+    "    \n",
+    "class Tanh:\n",
+    "    def __call__(self, *args, **kwds):\n",
+    "        pass"
    ]
   }
  ],
