--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -427,8 +427,9 @@
     "        return [self.gamma, self.beta]\n",
     "    \n",
     "class Tanh:\n",
-    "    def __call__(self, *args, **kwds):\n",
-    "        pass"
+    "    def __call__(self, x):\n",
+    "        self.out = torch.tanh(x)\n",
+    "        return self.out "
    ]
   }
  ],
