--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -429,7 +429,10 @@
     "class Tanh:\n",
     "    def __call__(self, x):\n",
     "        self.out = torch.tanh(x)\n",
-    "        return self.out "
+    "        return self.out \n",
+    "    \n",
+    "    def parameters(self):\n",
+    "        return [] "
    ]
   }
  ],
