--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -432,7 +432,9 @@
     "        return self.out \n",
     "    \n",
     "    def parameters(self):\n",
-    "        return [] "
+    "        return [] \n",
+    "    \n",
+    "n_embd = 10 # the dimensionality of the character embedding vectors "
    ]
   }
  ],
