--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -434,7 +434,8 @@
     "    def parameters(self):\n",
     "        return [] \n",
     "    \n",
-    "n_embd = 10 # the dimensionality of the character embedding vectors "
+    "n_embd = 10 # the dimensionality of the character embedding vectors \n",
+    "n_hidden = 100 # the number of neurons in the hidden layer of the MLP "
    ]
   }
  ],
