--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -435,7 +435,8 @@
     "        return [] \n",
     "    \n",
     "n_embd = 10 # the dimensionality of the character embedding vectors \n",
-    "n_hidden = 100 # the number of neurons in the hidden layer of the MLP "
+    "n_hidden = 100 # the number of neurons in the hidden layer of the MLP \n",
+    "g = torch.Generator().manual_seed(2147483647) # for reproducibility "
    ]
   }
  ],
