--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -438,7 +438,15 @@
     "n_hidden = 100 # the number of neurons in the hidden layer of the MLP \n",
     "g = torch.Generator().manual_seed(2147483647) # for reproducibility \n",
     "\n",
-    "C = torch.randn((vocab_size, n_embd),       generator=g)"
+    "C = torch.randn((vocab_size, n_embd),       generator=g)\n",
+    "layers = [\n",
+    "    Linear(n_embd * block_size, n_hidden, bias=False), BatchNorm1d(n_hidden), Tanh(), \n",
+    "    Linear(           n_hidden, n_hidden, bias=False), BatchNorm1d(n_hidden), Tanh(),\n",
+    "    Linear(           n_hidden, n_hidden, bias=False), BatchNorm1d(n_hidden), Tanh(),\n",
+    "    Linear(           n_hidden, n_hidden, bias=False), BatchNorm1d(n_hidden), Tanh(),\n",
+    "    Linear(           n_hidden, n_hidden, bias=False), BatchNorm1d(n_hidden), Tanh(),\n",
+    "    Linear(           n_hidden, vocab_size, bias=False), BatchNorm1d(vocab_size),\n",
+    "]"
    ]
   }
  ],
