--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -446,6 +446,10 @@
     "    Linear(           n_hidden, n_hidden, bias=False), BatchNorm1d(n_hidden), Tanh(),\n",
     "    Linear(           n_hidden, n_hidden, bias=False), BatchNorm1d(n_hidden), Tanh(),\n",
     "    Linear(           n_hidden, vocab_size, bias=False), BatchNorm1d(vocab_size),\n",
+    "]\n",
+    "\n",
+    "layers = [\n",
+    "    Linear(n_embd * block_size, n_hidden), Tanh(), \n",
     "]"
    ]
   }
