--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -450,6 +450,11 @@
     "\n",
     "layers = [\n",
     "    Linear(n_embd * block_size, n_hidden), Tanh(), \n",
+    "    Linear(           n_hidden, n_hidden), Tanh(),\n",
+    "    Linear(           n_hidden, n_hidden), Tanh(),\n",
+    "    Linear(           n_hidden, n_hidden), Tanh(),\n",
+    "    Linear(           n_hidden, n_hidden), Tanh(),\n",
+    "    Linear(           n_hidden, vocab_size),\n",
     "]"
    ]
   }
