--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -448,14 +448,14 @@
     "    Linear(           n_hidden, vocab_size, bias=False), BatchNorm1d(vocab_size),\n",
     "]\n",
     "\n",
-    "layers = [\n",
-    "    Linear(n_embd * block_size, n_hidden), Tanh(), \n",
-    "    Linear(           n_hidden, n_hidden), Tanh(),\n",
-    "    Linear(           n_hidden, n_hidden), Tanh(),\n",
-    "    Linear(           n_hidden, n_hidden), Tanh(),\n",
-    "    Linear(           n_hidden, n_hidden), Tanh(),\n",
-    "    Linear(           n_hidden, vocab_size),\n",
-    "]"
+    "# layers = [\n",
+    "#     Linear(n_embd * block_size, n_hidden), Tanh(), \n",
+    "#     Linear(           n_hidden, n_hidden), Tanh(),\n",
+    "#     Linear(           n_hidden, n_hidden), Tanh(),\n",
+    "#     Linear(           n_hidden, n_hidden), Tanh(),\n",
+    "#     Linear(           n_hidden, n_hidden), Tanh(),\n",
+    "#     Linear(           n_hidden, vocab_size),\n",
+    "# ]"
    ]
   }
  ],
