--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -455,7 +455,10 @@
     "#     Linear(           n_hidden, n_hidden), Tanh(),\n",
     "#     Linear(           n_hidden, n_hidden), Tanh(),\n",
     "#     Linear(           n_hidden, vocab_size),\n",
-    "# ]"
+    "# ] \n",
+    "\n",
+    "with torch.no_grad():\n",
+    "    # last layer: make less confident "
    ]
   }
  ],
