--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -458,7 +458,13 @@
     "# ] \n",
     "\n",
     "with torch.no_grad():\n",
-    "    # last layer: make less confident "
+    "    # last layer: make less confident \n",
+    "    layers[-1].gamma *= 0.1 \n",
+    "    # layers[-1].weight *= 0.1 \n",
+    "    # all other layers: apply gain \n",
+    "    for layer in layers[:-1]:\n",
+    "        if isinstance(layer, Linear):\n",
+    "            layer.weight *= 1.0 #5/3 "
    ]
   }
  ],
