--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -464,7 +464,9 @@
     "    # all other layers: apply gain \n",
     "    for layer in layers[:-1]:\n",
     "        if isinstance(layer, Linear):\n",
-    "            layer.weight *= 1.0 #5/3 "
+    "            layer.weight *= 1.0 #5/3 \n",
+    "            \n",
+    "parameters = [C] + [p for layer in layers for p in layer.parameters()]"
    ]
   }
  ],
