--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -466,7 +466,8 @@
     "        if isinstance(layer, Linear):\n",
     "            layer.weight *= 1.0 #5/3 \n",
     "            \n",
-    "parameters = [C] + [p for layer in layers for p in layer.parameters()]"
+    "parameters = [C] + [p for layer in layers for p in layer.parameters()]\n",
+    "print(sum(p.nelement() for p in parameters)) # number of parameters in total "
    ]
   }
  ],
