--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -467,7 +467,9 @@
     "            layer.weight *= 1.0 #5/3 \n",
     "            \n",
     "parameters = [C] + [p for layer in layers for p in layer.parameters()]\n",
-    "print(sum(p.nelement() for p in parameters)) # number of parameters in total "
+    "print(sum(p.nelement() for p in parameters)) # number of parameters in total \n",
+    "for p in parameters:\n",
+    "    p.requires_grad = True "
    ]
   }
  ],
