--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -485,7 +485,13 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# same optimization as last time \n",
+    "max_steps = 200000\n",
+    "batch_size = 32 \n",
+    "lossi = [] \n",
+    "ud = [] "
+   ]
   }
  ],
  "metadata": {
