--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -490,7 +490,13 @@
     "max_steps = 200000\n",
     "batch_size = 32 \n",
     "lossi = [] \n",
-    "ud = [] "
+    "ud = [] \n",
+    "\n",
+    "for i in range(max_steps):\n",
+    "    \n",
+    "    # minibatch construct \n",
+    "    ix = torch.randn(0, Xtr.shape[0], (batch_size,), generator=g)\n",
+    "    Xb, Yb = Xtr[ix], Ytr[ix] # batch X,Y "
    ]
   }
  ],
