--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -495,7 +495,7 @@
     "for i in range(max_steps):\n",
     "    \n",
     "    # minibatch construct \n",
-    "    ix = torch.randn(0, Xtr.shape[0], (batch_size,), generator=g)\n",
+    "    ix = torch.randint(0, Xtr.shape[0], (batch_size,), generator=g)\n",
     "    Xb, Yb = Xtr[ix], Ytr[ix] # batch X,Y "
    ]
   }
