--- a/mlp_multiple_layers.ipynb
+++ b/mlp_multiple_layers.ipynb
@@ -498,7 +498,8 @@
     "    ix = torch.randint(0, Xtr.shape[0], (batch_size,), generator=g)\n",
     "    Xb, Yb = Xtr[ix], Ytr[ix] # batch X,Y \n",
     "    \n",
-    "    # forward pass "
+    "    # forward pass \n",
+    "    emb = C[Xb] # embed the characters into vectors "
    ]
   }
  ],
